# supercollider

./: .README_WINDOWS.md.swo  .appveyor.yml  .clang-format  .editorconfig  .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  0001-Add-rational-number-support.patch  AUTHORS  CHANGELOG.md  CHANGELOG_archive.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog  DEVELOPING.md  DOXYFILE  Doxyfile  INSTALL  MOVED_STUFF.txt  Makefile  Makefile.am  README  README IPHONE  README LINUX  README OS X  README WINDOWS  README-IF-USING-XCODE-2.1.txt  README.md  README.txt  README_BEAGLEBONE_BLACK.md  README_BELA.md  README_CURRENT_ISSUES.scd  README_IPHONE.md  README_IPHONE.txt  README_JAILBROKEN_IPHONE.md  README_LINUX.md  (+75 more)
QtCollider/: CMakeLists.txt  Common.cpp  Common.h  LanguageClient.cpp  LanguageClient.h  MainLoop.h  Painting.h  QObjectProxy.cpp  QObjectProxy.h  QWidgetProxy.cpp  QWidgetProxy.h  QcApplication.cpp  QcApplication.h  QcCallback.cpp  QcCallback.hpp  QcHelper.h  QcObjectFactory.cpp  QcObjectFactory.h  QcPen.cpp  QcPen.h  QcSignalSpy.h  QcWidgetFactory.h  QtCollider.h  QtDownload.cpp  QtDownload.h  Slot.cpp  Slot.h  debug.cpp  debug.h  factories.cpp  image.h  interface.cpp  metatype.cpp  metatype.hpp  painting.h  resources.qrc  safeptr.hpp  type_codec.cpp  type_codec.hpp
QtCollider/hacks/: hacks_mac.M  hacks_mac.hpp  hacks_mac.mm  hacks_qt.hpp  hacks_x11.cpp  hacks_x11.hpp
QtCollider/layouts/: classic_layouts.cpp  classic_layouts.hpp  layouts.cpp  layouts.hpp  stack_layout.cpp  stack_layout.hpp
QtCollider/primitives/: PrimitiveDefiner.h  image_primitive_helper_funcs.h  prim_QImage.cpp  prim_QObject.cpp  prim_QPalette.cpp  prim_QPalette.hpp  prim_QPen.cpp  prim_QPen_oldskool.cpp  prim_QQuartzComposer.mm  prim_QWidget.cpp  prim_misc.cpp  primitives.cpp  primitives.h
QtCollider/style/: ProxyStyle.cpp  ProxyStyle.hpp  routines.hpp  slider_style.cpp  style.cpp  style.hpp
QtCollider/widgets/: BasicWidgets.cpp  BasicWidgets.h  QcAbstractStepValue.cpp  QcAbstractStepValue.h  QcButton.cpp  QcButton.h  QcCanvas.cpp  QcCanvas.h  QcCheckBox.h  QcFileDialog.cpp  QcFileDialog.h  QcGraph.cpp  QcGraph.h  QcHelpBrowser.cpp  QcHelpBrowser.hpp  QcKnob.cpp  QcKnob.hpp  QcLevelIndicator.cpp  QcLevelIndicator.h  QcListWidget.cpp  QcListWidget.h  QcMenu.cpp  QcMenu.h  QcMultiSlider.cpp  QcMultiSlider.h  QcNumberBox.cpp  QcNumberBox.h  QcPenPrinter.cpp  QcPenPrinter.h  QcPopUpMenu.cpp  QcPopUpMenu.h  QcQuartzComposerView.h  QcQuartzComposerView.mm  QcRangeSlider.cpp  QcRangeSlider.h  QcScope.cpp  QcScope.h  QcScopeShm.cpp  QcScopeShm.h  QcScrollArea.cpp  (+24 more)
bindings/PySCLang/: CMakeLists.txt  PySCLang_Module.cpp  PySCLang_Module.h  PySCLang_Module_GUIStuff.cpp  PySCLang_vpost_stuff.cpp  stdafx.h
common/: CMakeLists.txt  MsgFifo.h  SC_AllocPool.cpp  SC_AllocPool.h  SC_Apple.hpp  SC_Apple.mm  SC_AppleEventLoop.hpp  SC_AppleEventLoop.mm  SC_Assert.cpp  SC_Assert.h  SC_Codecvt.hpp  SC_DirUtils.cpp  SC_DirUtils.h  SC_Errors.cpp  SC_Errors.h  SC_EventLoop.hpp  SC_Filesystem.cpp  SC_Filesystem.hpp  SC_Filesystem_iphone.cpp  SC_Filesystem_linux.cpp  SC_Filesystem_macos.cpp  SC_Filesystem_unix.cpp  SC_Filesystem_win.cpp  SC_List.h  SC_Lock.h  SC_OscUtils.hpp  SC_PaUtils.cpp  SC_PaUtils.hpp  SC_Reply.cpp  SC_ReplyImpl.hpp  SC_Sem.cpp  SC_Sem.h  SC_ServerBootDelayWarning.cpp  SC_ServerBootDelayWarning.h  SC_SndFileHelpers.hpp  SC_StandAloneInfo_Darwin.cpp  SC_StandAloneInfo_Darwin.h  SC_StringBuffer.cpp  SC_StringParser.cpp  SC_StringParser.h  (+27 more)
common/Packager/: OPTIONALS_README_OSX.rtf  package
common/Source/: CMakeLists.txt
common/cmake_modules/: FindICU.cmake  FindJack.cmake  FindPortaudio.cmake  FindSndfile.cmake  MacOSXBundleInfo.plist.in
common/mac/: SC_Filesystem.cpp
dyncall/: .hgtags  AUTHORS  BUGS  CMakeLists.txt  ChangeLog  LICENSE  Makefile.embedded  Makefile.generic  Nmakefile  README  ToDo  configure  configure.bat  configure.rc  mkfile
dyncall/.hg/: dirstate  hgrc  undo.desc
dyncall/autovar/: LICENSE.txt  README.txt  autovar_ABI.h  autovar_ARCH.h  autovar_CC.h  autovar_OS.h  autovar_OSFAMILY.h
dyncall/doc/: Description.txt  License.txt  Makefile.generic  README-Cross.txt  README.CMake  README.Generic  README.MacOSX  README.Minix  README.NDS  README.PSP  README.SunOS  README.Windows  README.embedded  README.iOS
dyncall/dyncall/: CMakeLists.txt  (+92 more)
editors/: CMakeLists.txt
external_libraries/: CMakeLists.txt  README_BOOST.md  boost_sc_changes.patch  extract_boost.sh  oscpack_build.cpp
lang/: CMakeLists.txt
libs/: CMakeLists.txt  README  SConscript  SConscript.boost  SConscript.portaudio  oscpack_build.cpp  sndfile.hh
linux/: Makefile.am  README  bootstrap  libsclang.pc.in  libscsynth.pc.in
linux-dev/: changes.rtf  configure.in  scsynthlib_exp
mac/: CMakeLists.txt  build  clean-compile.sh  clean-compile3264.sh  compile.sh  compile3264.sh  libscsynth_exp
server/: CMakeLists.txt
source/: CMakeLists.txt  Makefile.am  SConscript
src/: CMakeLists.txt  doc_manager.cpp  doc_manager.hpp  main.cpp  main.hpp  sc_ipc.hpp  sc_process.hpp  sc_syntax_highlighter.cpp  sc_syntax_highlighter.hpp
summer2004-1/: Makefile.am  compile-xcode.sh  distro  scsynthlib_exp
testsuite/: CMakeLists.txt  SConscript  SConstruct  approximation_test.cpp  audio_backend_test.cpp  boost_test.cpp  buffer_manager_test.cpp  callback_interpreter_system.cpp  control_bus_test.cpp  default.scsyndef  dsp_ringbuffer_test.cpp  dsp_simd_benchmarks.cpp  dsp_tests.cpp  env_follower_test.cpp  fast_sinosc_test.cpp  filter.cpp  help_LocalIn.scsyndef  interpolated_value_test.cpp  interpolation.cpp  lag_test.cpp  map1d_test.cpp  median_filter_benchmarks.cpp  median_noise_tests.cpp  memory-pool_test.cpp  muladd_helpers_test.cpp  mutex_test.cpp  noise_test.cpp  osc_dispatcher_test.cpp  osc_server_test.cpp  parameter.cpp  perf_counter_test.cpp  ringbuffer_test.cpp  rng.cpp  rw_mutex_test.cpp  rw_spinlock_test.cpp  sc_plugin_loader_test.cpp  sc_synth_prototype_test.cpp  sc_synthdef_test.cpp  server_dsp_thread_queue_test.cpp  server_dsp_thread_test.cpp  (+20 more)
(+13045 files in other folders)
